<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is a part of the Yandex Advertising Network
  ~
  ~ Version for Android (C) 2022 YANDEX
  ~
  ~ You may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at https://legal.yandex.com/partner_ch/
  -->

<resources>

    <string name="app_name">Yandex Mobile Ads</string>

    <!--  Ad units  -->
    <string name="compose_examples_title">Jetpack Compose Examples</string>
    <string name="playable_title">Playable</string>
    <string name="sticky_banner_title">Sticky banner</string>
    <string name="inline_banner_title">Inline banner</string>
    <string name="interstitial_title">Interstitial</string>
    <string name="rewarded_title">Rewarded</string>
    <string name="appopenad_title">AppOpenAd</string>
    <string name="native_template_title">Native template</string>
    <string name="native_custom_title">Custom native</string>
    <string name="adfox_carousel_title">Adfox Carousel</string>
    <string name="instream_simple_title">Simple instream</string>
    <string name="instream_binder_title">Instream: Pre / Mid / Post-Roll</string>
    <string name="instream_inroll_title">Instream: In-Roll</string>
    <string name="feed_title">Feed</string>

    <!--  Mediation networks  -->
    <string name="yandex_title">Yandex</string>
    <string name="admanager_title">Admanager</string>
    <string name="admob_title">AdMob</string>
    <string name="applovin_title">AppLovin</string>
    <string name="appnext_title">Appnext</string>
    <string name="bigoads_title">BigoAds</string>
    <string name="chartboost_title">Chartboost</string>
    <string name="inmobi_title">InMobi</string>
    <string name="mintegral_title">Mintegral</string>
    <string name="my_target_title">MyTarget</string>
    <string name="startapp_title">StartApp</string>
    <string name="vungle_title">Vungle</string>
    <string name="ironsource_title">IronSource</string>
    <string name="pangle_title">Pangle</string>
    <string name="tapjoy_title">Tapjoy</string>
    <string name="unity_ads_title">Unity Ads</string>
    <string name="adfox_title">AdFox</string>

    <!--  Ad info  -->
    <string name="network">Network</string>
    <string name="logs">Logs</string>
    <string name="load_ad">Load ad</string>
    <string name="loading_ad">Loading ad</string>
    <string name="pause_inroll_button_text">Pause</string>
    <string name="resume_inroll_button_text">Resume</string>
    <string name="instream_content_url">https://storage.mds.yandex.net/get-ads-mobile-sdk/212922/d170b1d2-0871-40ef-af57-9a0ae7428622</string>

    <!--  Native ad  -->
    <string name="native_ad_title_text">Yandex.Browser for iPhone and Android</string>
    <string name="native_ad_body_text">Your bookmarks and favorite sites are available to you on any device with Yandex.Browser. You will never lose them, even if you lose your device or break it.</string>
    <string name="native_ad_domain_text">https://browser.yandex.com</string>
    <string name="native_ad_sponsored_text">Yandex.Direct</string>
    <string name="native_ad_age_text">16+ </string>
    <string name="native_ad_warning_text">We strongly recommend avoiding this type of website and not clicking the Ignore this warning button!</string>
    <string name="native_ad_call_to_action_text">Install</string>
    <string name="native_appinstall_price_text">Free</string>

    <!-- Adfox slider -->
    <string name="adfox_slider_previous_ad">Previous ad</string>
    <string name="adfox_slider_next_ad">Next ad</string>

    <!--  Policies  -->
    <string name="policies">Policies</string>
    <string name="gdpr_dialog_title">This is sample of GDPR dialog</string>
    <string name="gdpr_dialog_message">This application contains Yandex advertising code that collects data in order to show you relevant ads that better match your interests. To learn more about how and why Yandex processes your data, see the Privacy Policy.</string>
    <string name="gdpr_enabled">User consent enabled</string>
    <string name="gdpr_disabled">User consent disabled</string>
    <string name="coppa_dialog_title">This is a sample of COPPA dialog</string>
    <string name="coppa_dialog_message">This application contains Yandex advertising code that may show ads that are not suitable for children. Please enter your age so we can make sure the ads shown are appropriate.</string>
    <string name="coppa_enabled">User is age restricted</string>
    <string name="coppa_disabled">User is not age restricted</string>
    <string name="location_dialog_title">This is a sample of location dialog</string>
    <string name="location_dialog_message">This application contains Yandex advertising code that gets your approximate location in order to show you relevant ads that better match your region.</string>
    <string name="location_enabled">Location consent enabled</string>
    <string name="location_disabled">Location consent disabled</string>
    <string name="cmp_present_form">Present CMP form</string>
    <string name="cmp_reset_status">Reset CMP</string>
    <string name="cmp_test_device_unavailable">unavailable</string>
    <string name="cmp_debug_params_applied">Debug params applied: geography=EEA, testDeviceId=%1$s. Add testDeviceId to AdMob test devices if the form does not appear.</string>
    <string name="cmp_debug_present_requested">Present consent form requested (trigger=%1$s)</string>
    <string name="cmp_message_success">Consent form has been successfully presented</string>
    <string name="cmp_message_not_required">Consent form was not shown (NOT_REQUIRED). Common reasons: consent already collected on this device — use ⋮ → Reset CMP, then Present CMP form; device treated as outside EEA — this sample forces geography=EEA via debug params; CMP form is not configured in AdMob Privacy &amp; messaging. See logcat for testDeviceId.</string>
    <string name="cmp_message_presentation_failed">Presentation failed: %1$s</string>
    <string name="cmp_debug_reset_requested">Reset consent status requested</string>
    <string name="cmp_message_reset_done">Consent status reset. Use Present CMP form to show the form again.</string>
    <string name="open_dialog">Open dialog</string>
    <string name="accept">Accept</string>
    <string name="about">About</string>
    <string name="decline">Decline</string>
    <string name="coppa_underage">I am underage</string>
    <string name="coppa__not_underage">I am not underage</string>
    <string name="age">Age</string>

    <!--  Other  -->
    <string name="navigation_item_icon">Navigation item icon</string>
    <string name="list_item_icon">List item icon</string>
    <string name="chevron">chevron</string>
    <string name="warning">Warning</string>
    <string name="network_warning">Keep in mind that some ad networks do not work globally and could not show ads in some regions.\nFor testing purposes see supported regions for every ad network and use VPN or other tools to request ads from supported regions.</string>
    <string name="ok_button">OK</string>
    <string name="show_ad">Show Ad</string>
    <string name="log_format">%1$s\n%2$s</string>
    <string name="debug_panel">Debug Panel</string>

    <!--  AppOpenAd  -->
    <string name="info_title">Info</string>
    <string name="appopenad_info_body">Collapse and open App from recent to view AppOpenAd.</string>

    <!-- Playable -->
    <string name="playable_scan_qr_title">Scan QR Code</string>
    <string name="playable_scan_hint">Point camera at a QR code\nto load a playable creative</string>
    <string name="playable_camera_permission_required">Camera permission is required to scan QR codes.</string>
    <string name="playable_empty_title">No playables yet</string>
    <string name="playable_empty_subtitle">Scan a QR code to add a playable creative</string>
    <string name="playable_with_video">With video</string>
    <string name="playable_scan_qr_button">Scan QR</string>

    <!-- Feed -->
    <string name="another_adapter_item_title">Another adapter item #%1$d</string>
    <string name="show_feed_ad">Show feed</string>
    <string name="show_concat_feed_ad">Show concat feed</string>
    <string name="feed_log">Feed log</string>

    <!-- TV Start screen -->
    <string name="tv_formats">Форматы</string>
    <string name="tv_instream_preroll">Instream Preroll</string>
    <string name="tv_instream_midroll">Instream Midroll</string>
    <string name="tv_instream_postroll">Instream Postroll</string>
    <string name="tv_yandex_ads">Яндекс Реклама</string>
    <string name="tv_watch_demo">Смотреть демо</string>
    <string name="tv_qr_code">QR код</string>
    <string name="tv_scan_qr_text">Отсканируйте QR-код \n с документацией для SDK</string>

    <!-- TV Instream -->
    <string name="tv_video_name">Название видео</string>
    <string name="tv_video_description">Описание видео</string>
    <string name="tv_pause">Пауза</string>
    <string name="tv_play">Воспроизвести</string>
    <string name="tv_back_to_format">Назад к формату</string>
    <string name="tv_return_to_menu">Вернуться в меню</string>
    <string name="tv_ad_error_title">Реклама не загрузилась</string>
    <string name="tv_content_error_title">Основное видео не загрузилось</string>
    <string name="tv_error_description">Вы можете попробовать ещё раз или вернуться в меню.</string>
    <string name="tv_error_try_again">Загрузить еще раз</string>
    <string name="tv_error_return_to_menu">В меню</string>

</resources>
