<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is a part of the Yandex Advertising Network
  ~
  ~ Version for Android (C) 2022 YANDEX
  ~
  ~ You may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at https://legal.yandex.com/partner_ch/
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingHorizontal="@dimen/list_item_padding">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/ic_outline_handshake_24"
        android:contentDescription="@string/list_item_icon"
        app:tint="@color/material_on_surface_emphasis_medium" />

    <TextView
        android:id="@+id/title"
        android:layout_marginHorizontal="@dimen/list_item_text_padding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/gdpr_disabled"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_dialog"
        style="@style/Widget.Material3.Button.TonalButton" />

</LinearLayout>
