<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is a part of the Yandex Advertising Network
  ~
  ~ Version for Android (C) 2023 YANDEX
  ~
  ~ You may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at https://legal.yandex.com/partner_ch/
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adunits.AppOpenAdActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_outline_arrow_back_24"
        app:navigationIconTint="@color/material_on_surface_emphasis_medium"
        app:title="@string/appopenad_title" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/ic_outline_feed_24"
        app:tint="@color/material_on_surface_emphasis_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_margin="@dimen/item_padding"
        android:contentDescription="@string/list_item_icon" />

    <TextView
        android:id="@+id/title"
        android:layout_marginHorizontal="@dimen/list_item_text_padding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/info_title"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintTop_toTopOf="@id/icon"
        app:layout_constraintBottom_toBottomOf="@id/icon"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:text="@string/appopenad_info_body"
        style="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
