<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is a part of the Yandex Advertising Network
  ~
  ~ Version for Android (C) 2024 YANDEX
  ~
  ~ You may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at https://legal.yandex.com/partner_ch/
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adunits.FeedActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/feed_toolbar_menu"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_outline_arrow_back_24"
        app:navigationIconTint="@color/material_on_surface_emphasis_medium"
        app:title="@string/feed_title"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_ad_button"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_padding"
        android:text="@string/show_feed_ad"
        app:icon="@drawable/ic_outline_play_arrow_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_concat_ad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TonalButton"
        app:icon="@drawable/ic_outline_play_arrow_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_margin="@dimen/item_padding"
        android:text="@string/show_concat_feed_ad" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feed_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/item_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_concat_ad_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
